[tool.poetry]
name = "htbam-db-api"
version = "0.3.0"
description = ""
authors = ["duncan-muir <muir.duncan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.4.3"
numpy = "1.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
